# accelrd

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.direnv/: flake-profile-1-link
examples/: demo-against-mutel.sh
manifests/: admin.yaml  daemonset.yaml  rbac.yaml
manifests/prober/: deployment.yaml  rbac.yaml
src/: config.rs  exporter.rs  lifecycle.rs  main.rs  probe.rs  prober.rs  time.rs
src/admin/: assets.rs  k8s.rs  mod.rs  mutel.rs  routes.rs  state.rs
src/k8s/: facts.rs  labeler.rs  mod.rs
src/preflight/: health.rs  mod.rs  placeholder.rs
src/probe/: device.rs  mod.rs  net.rs  perftest.rs
src/prober/: annotations.rs  mod.rs  pair.rs  pods.rs  reconcile.rs  results.rs
src/sensors/: amd.rs  common.rs  host.rs  intel.rs  mod.rs  nvidia.rs
src/telemetry/: live.rs  mod.rs  preflight.rs
src/topology/: discover.rs  labels.rs  lldp.rs  mod.rs  rdma.rs
static/admin/: index.html
static/admin/css/: styles.css
static/admin/js/: app.js  topology.js
